[workspace]
members = [
  "sample",
  "01-trebuchet",
  "02-cube-conundrum",
  "03-gear-ratios",
  "04-scratchcards",
  "05-if-you-give-a-seed-a-fertilizer",
  "06-wait-for-it",
  "07-camel-cards",
  "08-haunted-wasteland",
  "09-mirage-maintenance",
  "10-pipe-maze",
  "11-cosmic-expansion",
  "12-hot-springs",
]
resolver = "2"

[workspace.dependencies]
itertools = { version = "*" }
